--- a/tutorial/angular/crud/src/app/app.component.html
+++ b/tutorial/angular/crud/src/app/app.component.html
@@ -2,6 +2,6 @@
 <h2>Lista de Peliculas</h2>
 <ul>
   <li *ngFor="let movie of movies">
-    <h2>{{movie.title}}</h2>
+    <h2 (click)="movieClicked(movie)">{{movie.title}}</h2>
   </li>
 </ul>
